# String

./: CMakeLists.txt  Catch  mystring.cpp  string.cpp
include/: lib.h  string.h  test_string.cpp
str/: lib.cpp  lib.h
test/: test_string.cpp
